fix(maker): fix distinct files bug cause inputPath and outputPath